Dev (#1)
- Started Circle CI build
- Ported over most back-end solutions and tools